--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,4 +5,14 @@
   = javascript_include_tag "application"
   = csrf_meta_tags
 %body
-  = yield
+  = render 'layouts/header'
+  .container
+    .row-fluid
+      .col-md-12
+      = yield
+
+  %footer
+    %p.copyright
+      &copy; #{Date.today.year} Discover, All rights reserved
+    %p.version
+      = Discover::VERSION
