--- a/app/assets/stylesheets/layout.css.sass
+++ b/app/assets/stylesheets/layout.css.sass
@@ -1,13 +1,25 @@
 header
   min-width: 976px
-  height: 46px
+  height: 55px
   border-bottom: 1px solid #999
   background-color: #8DEEEE
-
+  background: rgb(64,150,238) /* Old browsers */
+  background: -moz-linear-gradient(top,  rgba(64,150,238,1) 0%, rgba(122,188,255,1) 100%) /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(64,150,238,1)), color-stop(100%,rgba(122,188,255,1))) /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top,  rgba(64,150,238,1) 0%,rgba(122,188,255,1) 100%) /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top,  rgba(64,150,238,1) 0%,rgba(122,188,255,1) 100%) /* Opera 11.10+ */
+  background: -ms-linear-gradient(top,  rgba(64,150,238,1) 0%,rgba(122,188,255,1) 100%) /* IE10+ */
+  background: linear-gradient(to bottom,  rgba(64,150,238,1) 0%,rgba(122,188,255,1) 100%) /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4096ee', endColorstr='#7abcff',GradientType=0 ) /* IE6-9 */
+  
   h1
     margin: 0
     font-weight: bold
     color: black
+
+  #logo
+    width: 55px
+    margin-top: 5px
 
 footer
   border-top: 1px solid #ccc
