Home page edits

--- a/app/assets/stylesheets/layout.css.sass
+++ b/app/assets/stylesheets/layout.css.sass
@@ -1,3 +1,10 @@
+body
+  background-color: #DCF4FC
+
+  .container
+    background-color: white
+    height: 100%
+
 header
   min-width: 976px
   height: 55px
@@ -13,17 +20,21 @@ header
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4096ee', endColorstr='#7abcff',GradientType=0 ) /* IE6-9 */
   
   h1
-    margin: 0
-    font-weight: bold
-    color: black
+    font-family: 'Satisfy', cursive
+    display: inline
+    position: absolute
+    top: -7px
+    left: 45px
 
   #logo
+    position: absolute
     width: 55px
-    margin-top: 5px
+    top: 5px
 
 footer
   border-top: 1px solid #ccc
   margin: 2em 0 0
+  margin-top: 0px
   padding: 1em 0
   clear: both
   float: left
