--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,6 +1,7 @@
 !!! 5
 %head  
   %title Discover
+  = stylesheet_link_tag 'application', 'http://fonts.googleapis.com/css?family=Satisfy'
   = stylesheet_link_tag    "application", :media => "all"
   = javascript_include_tag "application"
   = csrf_meta_tags
