Home Page Login Form

--- a/app/assets/stylesheets/bootstrap.css.sass
+++ b/app/assets/stylesheets/bootstrap.css.sass
@@ -1263,6 +1263,10 @@ textarea.form-control
 
 .form-group
   margin-bottom: 15px
+ 
+.form-group-submit
+  border-top: 1px solid #e5e5e5
+  padding-top: 1em
 
 .radio, .checkbox
   display: block
