--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,2 +1,28 @@
-%h1 Users#new
-%p Find me in app/views/users/new.html.haml
+%h1.text-center Sign Up!
+.col-md-4.col-md-offset-4
+  = form_tag(sessions_path, method: :post, class: "form-horizontal well") do 
+    .form-group
+      = label_tag 'email', 'Email', class: "control-label col-md-3"
+      .col-md-9
+        = email_field_tag 'email', nil, class: "form-control" 
+    .form-group
+      = label_tag 'username', 'Username', class: "control-label col-md-3"
+      .col-md-9
+        = text_field_tag 'username', nil, class: "form-control"
+    .form-group
+      = label_tag 'fname', 'First Name', class: "control-label col-md-3"
+      .col-md-9
+        = text_field_tag 'fname', nil, class: "form-control"
+    .form-group
+      = label_tag 'lname', 'Last Name', class: "control-label col-md-3"
+      .col-md-9
+        = text_field_tag 'lname', nil, class: "form-control"
+    .form-group
+      = label_tag 'password', 'Password', class: "control-label col-md-3"
+      .col-md-9
+        = password_field_tag 'password', nil, class: "form-control" 
+
+    .form-group-submit.form-group
+      .col-md-9.col-md-offset-3
+        = submit_tag "Login", class: "btn btn-primary"
+
