--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -24,5 +24,5 @@
 
     .form-group-submit.form-group
       .col-md-9.col-md-offset-3
-        = submit_tag "Login", class: "btn btn-primary"
+        = submit_tag "Register", class: "btn btn-primary"
 
