--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,6 +1,6 @@
 %h1.text-center Sign Up!
 .col-md-4.col-md-offset-4
-  = form_tag(sessions_path, method: :post, class: "form-horizontal well") do 
+  = form_tag(users_path, method: :post, class: "form-horizontal well") do 
     .form-group
       = label_tag 'email', 'Email', class: "control-label col-md-3"
       .col-md-9
