Made the Discover logo a link\!\!

--- a/app/assets/stylesheets/layout.css.sass
+++ b/app/assets/stylesheets/layout.css.sass
@@ -49,6 +49,14 @@ html
         top: -7px
         left: 45px
 
+      #headlink
+        color: black
+        &:visited
+          color: black
+        &:active
+          color: black
+        &:hover
+          color: black
       #logo
         position: absolute
         width: 55px
