--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,3 +1,4 @@
 %header 
-	= image_tag "logo3.png", id: "logo"
-	%h1 iscover
+  = link_to(root_url) do
+    = image_tag "logo3.png", id: "logo"
+    %h1#headlink iscover
