--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,4 +1,4 @@
-%h1.text-center Sign Up!
+%h1.text-center Sign Up
 .col-md-4.col-md-offset-4
   = form_tag(users_path, method: :post, class: "form-horizontal well") do 
     .form-group
