--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -21,6 +21,10 @@
       = label_tag 'password', 'Password', class: "control-label col-md-4"
       .col-md-8
         = password_field_tag 'password', nil, class: "form-control" 
+    .form-group
+      = label_tag 'password', 'Password Confirmation', class: "control-label col-md-4", style: "margin-top: -8px;"
+      .col-md-8
+        = password_field_tag 'password_confirmation', nil, class: "form-control" 
 
     .form-group-submit.form-group
       .col-md-4.col-md-offset-4
