--- a/app/assets/stylesheets/layout.css.sass
+++ b/app/assets/stylesheets/layout.css.sass
@@ -5,29 +5,6 @@ html
     background-color: #DCF4FC
     height: 100%
 
-    .container
-      background-color: white
-      padding-bottom: 25px
-      
-      footer
-        border-top: 1px solid #ccc
-        margin: 2em 0 0
-        margin-top: 0px
-        padding: 1em 0
-        clear: both
-        float: left
-        width: 100%
-
-        > p
-          color: #999
-          font-size: .9em
-
-          float: left
-          width: 50%
-
-          &:last-child
-            text-align: right
-
     header
       min-width: 976px
       height: 55px
@@ -62,4 +39,29 @@ html
         width: 55px
         top: -2px
 
+    .container
+      background-color: white
+      padding-bottom: 25px
+        
+      #flash
+        margin-top: 10px
+      
+      footer
+        border-top: 1px solid #ccc
+        margin: 2em 0 0
+        margin-top: 0px
+        padding: 1em 0
+        clear: both
+        float: left
+        width: 100%
+
+        > p
+          color: #999
+          font-size: .9em
+
+          float: left
+          width: 50%
+
+          &:last-child
+            text-align: right
     
