--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,31 +1,31 @@
 %h1.text-center Sign Up
 .col-md-4.col-md-offset-4
-  = form_tag(users_path, method: :post, class: "form-horizontal well") do 
+  = form_for @user, html: { class: "form-horizontal well" } do  |f|
     .form-group
-      = label_tag 'email', 'Email', class: "control-label col-md-4"
+      = f.label :email, class: "control-label col-md-4"
       .col-md-8
-        = email_field_tag 'email', nil, class: "form-control" 
+        = f.email_field :email, class: "form-control" 
     .form-group
-      = label_tag 'username', 'Username', class: "control-label col-md-4"
+      = f.label :username, class: "control-label col-md-4"
       .col-md-8
-        = text_field_tag 'username', nil, class: "form-control"
+        = f.text_field :username, class: "form-control"
     .form-group
-      = label_tag 'fname', 'First Name', class: "control-label col-md-4"
+      = f.label :fname, "First Name", class: "control-label col-md-4"
       .col-md-8
-        = text_field_tag 'fname', nil, class: "form-control"
+        = f.text_field :fname, class: "form-control"
     .form-group
-      = label_tag 'lname', 'Last Name', class: "control-label col-md-4"
+      = f.label :lname, "Last Name", class: "control-label col-md-4"
       .col-md-8
-        = text_field_tag 'lname', nil, class: "form-control"
+        = f.text_field :lname, class: "form-control"
     .form-group
-      = label_tag 'password', 'Password', class: "control-label col-md-4"
+      = f.label :password, class: "control-label col-md-4"
       .col-md-8
-        = password_field_tag 'password', nil, class: "form-control" 
+        = f.password_field :password, class: "form-control" 
     .form-group
-      = label_tag 'password', 'Password Confirmation', class: "control-label col-md-4", style: "margin-top: -8px;"
+      = f.label :password_confirmation, "Password Confirmation", class: "control-label col-md-4", style: "margin-top: -8px;"
       .col-md-8
-        = password_field_tag 'password_confirmation', nil, class: "form-control" 
+        = f.password_field :password_confirmation, class: "form-control" 
 
     .form-group-submit.form-group
       .col-md-4.col-md-offset-4
-        = submit_tag "Register", class: "btn btn-primary"
+        = submit_tag "Sign Up", class: "btn btn-primary"
