--- a/app/assets/stylesheets/feeds.css.sass
+++ b/app/assets/stylesheets/feeds.css.sass
@@ -1,3 +1,5 @@
-// Place all the styles related to the feeds controller here.
-// They will automatically be included in application.css.
-// You can use Sass here: http://sass-lang.com/
+#coming-soon
+  display: inline
+
+#logout
+  margin-bottom: 15px
