--- a/app/assets/stylesheets/layout.css.sass
+++ b/app/assets/stylesheets/layout.css.sass
@@ -4,6 +4,9 @@ html
   body
     background-color: #DCF4FC
     height: 100%
+  
+    .container-main
+      padding: 0
 
     header
       min-width: 976px
@@ -64,4 +67,3 @@ html
 
           &:last-child
             text-align: right
-    
