Fixes to Navbar

--- a/app/assets/stylesheets/layout.css.sass
+++ b/app/assets/stylesheets/layout.css.sass
@@ -5,8 +5,9 @@ html
     background-color: #DCF4FC
     height: 100%
   
-    .container-main
+    .container-main#navbar-container
       padding: 0
+      padding-bottom: 0
 
     header
       min-width: 976px
