--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -4,7 +4,7 @@
     %h1#headlink iscover
 
 - if logged_in?
-  .container-main.container
+  .container-main.container#navbar-container
     %nav.navbar.navbar-default{role: 'navigation'}
       %ul.nav.nav-tabs
         %li.active
