Moved Logout Link

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -11,3 +11,5 @@
           = link_to "Home", '#'
         %li 
           = link_to "Profile", '#'
+        %li
+          = link_to "Logout", logout_path
