Added a placeholder text area for post entry!

--- a/app/views/feeds/index.html.haml
+++ b/app/views/feeds/index.html.haml
@@ -1,2 +1,7 @@
-%h1#coming-soon Coming Soon
-.postbox
+%h1.text-center#coming-soon Feed
+.col-md-4.col-md-offset-4
+  .postbox
+    = form_for :post, url: posts_path, html: {class: "form-horizontal well"} do |f|
+      .form-group
+        .col-md-4
+          = f.text_field :post, class: "form-control", placeholder: "Discover is a social network provides you with stuff."
