--- a/app/views/profiles/new.html.haml
+++ b/app/views/profiles/new.html.haml
@@ -1,1 +1,20 @@
-%h1 Coming Soon
+%h1.text-center Profile
+.col-md-8.col-md-offset-2
+  = form_for :profile, url: profiles_path, html: { class: "form-horizontal well" } do |f|
+    .form-group
+      = f.label :birthday, class: 'control-label col-md-2'
+      .col-md-4
+        = f.date_field :birthday, class: "form-control"
+      
+      = f.label :job, class: 'control-label col-md-2'
+      .col-md-4
+        = f.text_field :job, class: "form-control"
+
+    .form-group
+      = f.label :school, class: 'control-label col-md-2'
+      .col-md-4
+        = f.text_field :school, class: "form-control"
+
+      = f.label :birthplace, class: 'control-label col-md-2'
+      .col-md-4
+        = f.text_field :birthplace, class: "form-control"
