--- a/app/views/profiles/new.html.haml
+++ b/app/views/profiles/new.html.haml
@@ -23,3 +23,9 @@
       = f.label :location, class: 'control-label col-md-1'
       .col-md-4
         = f.text_field :location, class: 'form-control'
+
+      .col-md-5.col-md-offset-1
+        %button.btn.btn-default#add-movies-profile{type: 'button', :'data-toggle' => 'modal', :'data-target' => '#moviesModal'}
+          Movies
+          %span.glyphicon.glyphicon-chevron-right
+= render "movies_modal"
