Made feed more aesthetically pleasing!

--- a/app/assets/stylesheets/layout.css.sass
+++ b/app/assets/stylesheets/layout.css.sass
@@ -7,8 +7,10 @@ html
   
     .container-main#navbar-container
       padding: 0
-      padding-bottom: 0
 
+      .navbar
+        margin: 0
+			
     header
       min-width: 976px
       height: 55px
